<resources>
    <string name="app_name">Chopit App</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="chopit_app">Chopit App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="for_back_move">For Back Move</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="or_login_with">Or Login with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="personal_information">Personal Information</string>
    <string name="upload_your_file_here">Upload your file here</string>
    <string name="upload">Upload</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="phone_no">Phone No</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="remember_password">Remember Password?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="confirm">Confirm</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="account_created">Account Created</string>
    <string name="your_account_has_been_created_successfully">Your account has been created successfully.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify">Verify</string>
    <string name="skin_bored_bunny">Skin Bored Bunny</string>
    <string name="_100">$100</string>
    <string name="_100_item_sold_out">100+ item sold out</string>
    <string name="_4_0">4.0</string>
    <string name="rating">Rating</string>
    <string name="buy_now">Buy now</string>
    <string name="search_here">Search Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tyler_the_creator">Tyler: The Creator</string>
    <string name="_12m_followers">12M Followers</string>
    <string name="follow">Follow</string>
    <string name="items">Items</string>
    <string name="activity">Activity</string>
    <string name="dour_darcel">Dour Darcel</string>
    <string name="_323">#323</string>
    <string name="price">Price</string>
    <string name="t_shirt_2">T-Shirt 2</string>
    <string name="_50">$50</string>
    <string name="_5_0">(5.0)</string>
    <string name="show_review">Show Review</string>
    <string name="add">Add</string>
    <string name="outfit_no_1">Outfit No 1</string>
    <string name="color">Color:</string>
    <string name="black">Black</string>
    <string name="size">Size:</string>
    <string name="m">M</string>
    <string name="total">Total:</string>
    <string name="order_completed_successfully">Order Completed Successfully</string>
    <string name="completed">Completed</string>
    <string name="check_out">Check Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="collect_and_sell_extraordinary_itms">Collect and Sell extraordinary itms</string>
    <string name="learn_more">Learn more</string>
    <string name="hot_item">Hot Item</string>
    <string name="see_more"><![CDATA[See more >]]></string>
    <string name="top_sellers">Top Sellers</string>
    <string name="payment">Payment</string>
    <string name="change">Change</string>
    <string name="_456">***** **** 456</string>
    <string name="your_payment_card">Your Payment Card</string>
    <string name="use_as_default_payment_method">Use as default payment method</string>
    <string name="order">Order:</string>
    <string name="delivery">Delivery:</string>
    <string name="summary">Summary</string>
    <string name="submit_order">Submit Order</string>
    <string name="browse">Browse</string>
    <string name="plus">+</string>
    <string name="dollar">$</string>
    <string name="title">Title</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="avatar_bared_bunny">Avatar Bared Bunny</string>
    <string name="fullstack_designer">FullStack Designer</string>
    <string name="_7_online_from_12_people">7 online from 12 people</string>
    <string name="that_s_very_nice_place_you_guys_made_a_very_good_decision_can_t_wait_to_go_on_vacation">That’s very nice place! you guys made a very good decision. Can’t wait to go on vacation!</string>
    <string name="hello_guys_we_have_discussed_about_post_corona_vacation_plan_and_our_decision_is_to_go_to_bali_we_will_have_a_very_big_party_after_this_corona_ends_these_are_some_images_about_our_destination">Hello guys, we have discussed about post-corona vacation plan and our decision is to go to Bali. We will have a very big party after this corona ends! These are some images about our destination</string>
    <string name="hello_guys_we_will_have_a_very_big_party_after_this_corona_ends_these_are_some_images_about_our_destination">Hello guys, We will have a very big party after this corona ends! These are some images about our destination</string>
    <string name="inventory">Inventory</string>
    <string name="become_vendor">Become Vendor</string>
    <string name="view_collection">View Collection</string>
    <string name="continue_exploring">Continue Exploring</string>
    <string name="_4_00">4:00</string>
    <string name="is_typing">... is typing</string>
    <string name="_2_others_are_typing">+2 others are typing</string>
    <string name="edit">Edit</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="alex_hales">Alex Hales</string>
    <string name="cardholder_name">CardHolder Name</string>
    <string name="_1234">**** **** **** 1234</string>
    <string name="_01_23">01/23</string>
</resources>