<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg"
    android:layout_marginBottom="0.2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_category"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cartoonlower"
        android:scaleType="centerCrop"
        app:layout_constraintWidth_percent="0.3"/>
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_check"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:checked="true"
        app:roundPercent="1"
        android:background="#9EB1B8"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/image_category"
        app:layout_constraintTop_toTopOf="@id/image_category"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/iv_check"
        app:layout_constraintEnd_toEndOf="@id/iv_check"
        app:layout_constraintTop_toTopOf="@id/iv_check"
        app:layout_constraintBottom_toBottomOf="@id/iv_check"
        android:src="@drawable/ic_imagecheck"/>

    <TextView
        android:id="@+id/tv_categoryNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_category"
        android:text="@string/outfit_no_1"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanistbold"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_categorycolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_categoryNo"
        app:layout_constraintStart_toEndOf="@id/image_category"
        android:text="@string/color"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanistbold"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tv_categorycolortype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_categorycolor"
        app:layout_constraintBottom_toBottomOf="@id/tv_categorycolor"
        app:layout_constraintStart_toEndOf="@id/tv_categorycolor"
        android:text="@string/black"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanistbold"
        android:textSize="16sp"
        android:layout_marginStart="40dp"/>
    <TextView
        android:id="@+id/tv_categorysize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_categorycolor"
        app:layout_constraintStart_toEndOf="@id/image_category"
        android:text="@string/size"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanistbold"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"/>
    <TextView
        android:id="@+id/tv_categorysizetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_categorysize"
        app:layout_constraintBottom_toBottomOf="@id/tv_categorysize"
        app:layout_constraintStart_toStartOf="@id/tv_categorycolortype"
        android:text="@string/m"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanistbold"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tv_categoryprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_categorysize"
        app:layout_constraintStart_toEndOf="@id/image_category"
        android:text="@string/total"
        android:textColor="#24AEDB"
        android:fontFamily="@font/urbanistbold"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"/>
    <TextView
        android:id="@+id/tv_categoryamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_categoryprice"
        app:layout_constraintBottom_toBottomOf="@id/tv_categoryprice"
        app:layout_constraintStart_toStartOf="@id/tv_categorycolortype"
        android:text="@string/_100"
        android:textColor="#24AEDB"
        android:fontFamily="@font/urbanistbold"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>