<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".ui.activities.CreatePasswordActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/backbutton_design"
        android:paddingStart="13dp"
        android:paddingEnd="0dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="28dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:text="@string/create_new_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/urbanistbold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back" />

    <TextView
        android:id="@+id/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:text="@string/your_new_password_must_be_unique_from_those_previously_used"
        android:textColor="@color/color_otpdetail"
        android:fontFamily="@font/urbanistmedium"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_forgotpassword" />
    <EditText
        android:id="@+id/edittext_newpassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="22dp"
        android:autofillHints="name"
        android:background="@drawable/corner_background_dark"
        android:hint="@string/new_password"
        android:textColor="@color/whiteopacity"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"
        android:fontFamily="@font/urbanistmedium"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/whiteopacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_detail" />

    <EditText
        android:id="@+id/edittext_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:autofillHints="name"
        android:background="@drawable/corner_background_dark"
        android:hint="@string/confirm_password"
        android:textColor="@color/whiteopacity"
        android:importantForAutofill="no"
        android:inputType="textWebPassword"
        android:paddingStart="20dp"
        android:fontFamily="@font/urbanistmedium"
        android:paddingEnd="0dp"
        android:textColorHint="@color/whiteopacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_newpassword" />
    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/corner_background"
        android:text="@string/reset_password"
        android:fontFamily="@font/urbanistmedium"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_confirmpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>