<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/color_register"
        app:cardCornerRadius="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewinternal"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imagevendor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cartoonlower"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardviewinternal"
                android:text="@string/dour_darcel"
                android:textColor="@color/white"
                android:fontFamily="@font/urbanistbold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                android:layout_marginEnd="20dp"
                android:text="@string/_323"
                android:textColor="#A9ADB7"
                android:textSize="12sp"
                android:fontFamily="@font/urbanistbold"/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                android:text="@string/price"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="#A9ADB7"
                android:fontFamily="@font/urbanistlight"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/urbanistbold"
                android:text="@string/_100"
                android:textColor="#25D76C"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>