<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg"
    android:paddingTop="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintWidth_percent="0.17"
        app:cardBackgroundColor="@color/color_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/image_profilechat"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:scaleType="centerCrop"
        app:roundPercent="10"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_filter"
        android:src="@drawable/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardview"
        app:layout_constraintTop_toTopOf="parent">



   <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanistmedium"
        android:text="@string/fullstack_designer"
       android:layout_marginStart="20dp"
       app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="17dp"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/urbanistlight"
        android:text="@string/_4_00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_name" />

    <TextView
        android:id="@+id/istyping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/is_typing"
        android:textColor="@color/whiteopacity"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_line_1"
            android:scaleType="fitXY"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>